# commercialoperator

./: .eslintrc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  README.md  azure-pipelines.yml  cron  cronjobs  docker_repo_name  make_docker_image.sh  make_docker_image_bb.sh  manage_co.py  package-lock.json  patch_admin_0001_initial.patch  patch_migrations.patch  patch_reversion_0001.patch  pyproject.toml  python-cron  reporting_database_rebuild.sh  requirements.txt  segregation_steps.md  startup.sh
.devcontainer/: devcontainer.json
commercialoperator/: admin.py  apps.py  context_processors.py  cron.py  forms.py  helpers.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
commercialoperator/fixtures/: licence_period.json
commercialoperator/migrations/: 0001_initial.py  0004_paymentofficergroup.py  0008_auto_20190927_1002.py  0009_auto_20191001_2322.py  0010_auto_20191003_1519.py  0011_auto_20191130_1441.py  0011_auto_20191206_1413.py  0013_auto_20191212_1110.py  0014_auto_20191213_1452.py  0014_auto_20191216_1056.py  0016_auto_20200116_1107.py  0016_auto_20200122_1357.py  0017_auto_20200116_1849.py  0019_auto_20200122_1525.py  0020_auto_20200207_1140.py  0021_auto_20200224_1429.py  0021_auto_20200603_1642.py  0022_auto_20200226_1659.py  0034_districtproposal_districtproposalapprovergroup_districtproposalassessorgroup.py  0035_districtproposaldeclineddetails.py  0061_compliancefee_compliancefeeinvoice.py  0066_auto_20200702_2344.py  0103_referral_assigned_officer.py  0107_auto_20210305_1100.py  0108_auto_20210505_0806.py  0109_auto_20210513_1447.py  0111_auto_20210618_1601.py  0113_proposaleventsparks_activities_assessor.py  0114_proposalstandardrequirement_require_due_date.py  0115_remove_proposalstandardrequirement_require_due_date.py  0117_remove_park_visible_to_external.py  0118_park_visible_to_external.py  0119_proposalrequirement_notification_only.py  0120_auto_20210806_1501.py  0121_auto_20210806_1614.py  0122_auto_20210811_1655.py  0123_auto_20210811_1756.py  0124_bookinginvoice_property_cache.py  0126_organisationcontactdeclineddetails.py  0127_compliance_num_child_participants.py  (+9 more)
commercialoperator/migrations.old/: 0110_auto_20210618_1516.py  0112_proposaleventstrails_activities_assessor.py  0116_park_visible_to_external.py  0125_auto_20210902_1231.py  0128_auto_20230727_1017.py  0130_approval_future_licence.py
commercialoperator/templatetags/: users.py  utils.py
commercialoperator/utils/: __init__.py  migration_utils.py  (+1 more)
dockerdev/: Dockerfile
scripts/: myscript.py
vscode/: launch.json
(+291 files in other folders)
